--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/manrope": "^4.5.10",
     "@heroicons/react": "^1.0.6",
+    "moment": "^2.29.4",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
