--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@fontsource/manrope": "^4.5.10",
     "@heroicons/react": "^1.0.6",
+    "chart.js": "^3.8.0",
     "moment": "^2.29.4",
     "next": "12.2.2",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "utf8": "^3.0.0"
   },
